tests/ucc/type/bad/dereference-incomplete.c
struct b;

int main(void)
{
    struct b *a;

    *a;

    return 0;
}
